--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "metigy-codetest-frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://parryjos1.github.io/metigy-codetest-react",
   "dependencies": {
     "axios": "^0.19.0",
     "react": "^16.9.0",
@@ -9,6 +10,8 @@
     "react-scripts": "3.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
